# hd_wsi

./: .dockerignore  Dockerfile  README.md  configs.py  main.py  pyproject.toml  run_patch_inference.py  run_wsi_inference.py  summarize_tme_features.py  wsi_inference.py
utils/: utils.py  utils_features.py  utils_image.py  utils_wsi.py
